# MSFS-SimConnect-Data

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
MSFS-SimConnect-Data/: CMakeLists.txt  MSFS-SimConnect-CLI.cpp  MSFS-SimConnect-Data.cpp  MSFS-SimConnect-Data.h  MSFS-SimConnect-DataFormat.cpp  MSFS-SimConnect-DataFormat.h
